fetch orderbook rewards

--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,22 @@
+VOLUME_PATH=data
+
+# Dune credentials
 DUNE_API_KEY=
+
+# AWS Credentials
 AWS_ROLE=
 AWS_BUCKET=
-VOLUME_PATH=data
+
+
+#Orderbook DB Credentials
+PROD_ORDERBOOK_HOST=
+PROD_ORDERBOOK_USER=
+PROD_ORDERBOOK_PORT=
+PROD_ORDERBOOK_PASSWORD=
+PROD_ORDERBOOK_DB=
+
+BARN_ORDERBOOK_HOST=
+BARN_ORDERBOOK_USER=
+BARN_ORDERBOOK_PORT=
+BARN_ORDERBOOK_PASSWORD=
+BARN_ORDERBOOK_DB=
