--- a/.env.sample
+++ b/.env.sample
@@ -7,16 +7,13 @@ DUNE_API_KEY=
 AWS_ROLE=
 AWS_BUCKET=
 
-
 #Orderbook DB Credentials
+DB_USER=
+DB_PORT=
+DB_NAME=
+
 PROD_ORDERBOOK_HOST=
-PROD_ORDERBOOK_USER=
-PROD_ORDERBOOK_PORT=
 PROD_ORDERBOOK_PASSWORD=
-PROD_ORDERBOOK_DB=
 
 BARN_ORDERBOOK_HOST=
-BARN_ORDERBOOK_USER=
-BARN_ORDERBOOK_PORT=
 BARN_ORDERBOOK_PASSWORD=
-BARN_ORDERBOOK_DB=
