address comments splitting tests, fix env vars and try catch query exec

--- a/.env.sample
+++ b/.env.sample
@@ -8,12 +8,5 @@ AWS_ROLE=
 AWS_BUCKET=
 
 #Orderbook DB Credentials
-DB_USER=
-DB_PORT=
-DB_NAME=
-
-PROD_ORDERBOOK_HOST=
-PROD_ORDERBOOK_PASSWORD=
-
-BARN_ORDERBOOK_HOST=
-BARN_ORDERBOOK_PASSWORD=
+BARN_DB_URL={user}:{password}@{host}:{port}/{database}
+PROD_DB_URL={user}:{password}@{host}:{port}/{database}
