--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -31,12 +31,10 @@ jobs:
       - name: Install Requirements
         run:
           pip install -r requirements/dev.txt
-      - name: Tests
-        run: python -m pytest tests
+      - name: Unit Tests
+        run: python -m pytest tests/unit
+      - name: Integration Tests
+        run: python -m pytest tests/integration
         env:
-          DB_USER: ${{ secrets.DB_USER }}
-          DB_NAME: ${{ secrets.DB_NAME }}
-          PROD_ORDERBOOK_HOST: ${{ secrets.PROD_ORDERBOOK_HOST }}
-          PROD_ORDERBOOK_PASSWORD: ${{ secrets.PROD_ORDERBOOK_PASSWORD }}
-          BARN_ORDERBOOK_HOST: ${{ secrets.BARN_ORDERBOOK_HOST }}
-          BARN_ORDERBOOK_PASSWORD: ${{ secrets.BARN_ORDERBOOK_PASSWORD }}
+          PROD_DB_URL: ${{ secrets.PROD_DB_URL }}
+          BARN_DB_URL: ${{ secrets.BARN_DB_URL }}
