[Fetch] Orderbook Rewards (#3)
We migrate a query we have seen before in solver-rewards (namely the one querying for orderbook rewards on a block range). This block range will be specified as:

block_from = the latest synced block (coming in a follow up PR)
block_to = the latest synced block from the two orderbook databases

block_to is implemented here by querying the two databases for the smallest block with tx_from = Null taking the minimum of these two and subtracting 65 (for REORG protection)

--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,12 @@
+VOLUME_PATH=data
+
+# Dune credentials
 DUNE_API_KEY=
+
+# AWS Credentials
 AWS_ROLE=
 AWS_BUCKET=
-VOLUME_PATH=data
+
+#Orderbook DB Credentials
+BARN_DB_URL={user}:{password}@{host}:{port}/{database}
+PROD_DB_URL={user}:{password}@{host}:{port}/{database}
