implement delete/download file

--- a/.env.sample
+++ b/.env.sample
@@ -4,7 +4,9 @@ VOLUME_PATH=data
 DUNE_API_KEY=
 
 # AWS Credentials
-AWS_ROLE=
+AWS_INTERNAL_ROLE=
+AWS_EXTERNAL_ROLE=
+AWS_EXTERNAL_ID=
 AWS_BUCKET=
 
 #Orderbook DB Credentials
