--- a/.env.sample
+++ b/.env.sample
@@ -8,6 +8,8 @@ AWS_INTERNAL_ROLE=
 AWS_EXTERNAL_ROLE=
 AWS_EXTERNAL_ID=
 AWS_BUCKET=
+## This one is a bit weird... refers to a file at ~./aws/profile
+AWS_PROFILE=
 
 #Orderbook DB Credentials
 BARN_DB_URL={user}:{password}@{host}:{port}/{database}
