[Test] AWS Upload File (#5)
Testing assume role, upload file, download file and delete from external bucket

--- a/.env.sample
+++ b/.env.sample
@@ -4,8 +4,12 @@ VOLUME_PATH=data
 DUNE_API_KEY=
 
 # AWS Credentials
-AWS_ROLE=
+AWS_INTERNAL_ROLE=
+AWS_EXTERNAL_ROLE=
+AWS_EXTERNAL_ID=
 AWS_BUCKET=
+## This one is a bit weird... refers to a file at ~./aws/profile
+AWS_PROFILE=
 
 #Orderbook DB Credentials
 BARN_DB_URL={user}:{password}@{host}:{port}/{database}
