--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -4,11 +4,11 @@ on:
   push:
     branches: [ main ]
 jobs:
-  lint-format-types:
+  lint-format-types-test:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.9", "3.10", "3.11"]
+        python-version: ["3.8", "3.11"]
 
     steps:
       - uses: actions/checkout@v2
@@ -24,11 +24,12 @@ jobs:
         run: black --check ./
       - name: Type Check (mypy)
         run: mypy src --strict
+
   tests:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.9", "3.10", "3.11"]
+        python-version: ["3.8", "3.11"]
 
     steps:
       - uses: actions/checkout@v2
@@ -38,8 +39,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
 
       - name: Install Requirements
-        run:
-          pip install -r requirements/dev.txt
+        run: pip install -r requirements/dev.txt
       - name: Unit Tests
         run: python -m pytest tests/unit
       - name: Integration Tests
