--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -4,14 +4,18 @@ on:
   push:
     branches: [ main ]
 jobs:
-  lint-format-types:
+  lint-format-types-test:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ["3.9", "3.11"]
+
     steps:
       - uses: actions/checkout@v2
-      - name: Setup Python 3.10
+      - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v2
         with:
-          python-version: '3.10'
+          python-version: ${{ matrix.python-version }}
       - name: Install Requirements
         run: pip install -r requirements/dev.txt
       - name: Pylint
@@ -20,17 +24,22 @@ jobs:
         run: black --check ./
       - name: Type Check (mypy)
         run: mypy src --strict
+
   tests:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ["3.9", "3.11"]
+
     steps:
       - uses: actions/checkout@v2
-      - name: Setup Python 3.10
+      - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v2
         with:
-          python-version: '3.10'
+          python-version: ${{ matrix.python-version }}
+
       - name: Install Requirements
-        run:
-          pip install -r requirements/dev.txt
+        run: pip install -r requirements/dev.txt
       - name: Unit Tests
         run: python -m pytest tests/unit
       - name: Integration Tests
