--- a/.env.sample
+++ b/.env.sample
@@ -5,12 +5,13 @@ LOG_LEVEL=debug
 DUNE_API_KEY=
 
 # AWS Credentials
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+
 AWS_INTERNAL_ROLE=
 AWS_EXTERNAL_ROLE=
 AWS_EXTERNAL_ID=
 AWS_BUCKET=
-## This one is a bit weird... refers to a file at ~./aws/profile
-AWS_PROFILE=
 
 #Orderbook DB Credentials
 BARN_DB_URL={user}:{password}@{host}:{port}/{database}
