brain dump -- many working components

--- a/.env.sample
+++ b/.env.sample
@@ -17,3 +17,11 @@ AWS_BUCKET=
 #Orderbook DB Credentials
 BARN_DB_URL={user}:{password}@{host}:{port}/{database}
 PROD_DB_URL={user}:{password}@{host}:{port}/{database}
+
+# Node Credentials
+INFURA_KEY=
+
+# Tenderly Simulation Credentials
+TENDERLY_USER=
+TENDERLY_PROJECT=
+TENDERLY_ACCESS_KEY=
