update IPFS url and add access key

--- a/.env.sample
+++ b/.env.sample
@@ -17,3 +17,6 @@ AWS_BUCKET=
 #Orderbook DB Credentials
 BARN_DB_URL={user}:{password}@{host}:{port}/{database}
 PROD_DB_URL={user}:{password}@{host}:{port}/{database}
+
+# IPFS Gateway
+IPFS_ACCESS_TOKEN=
