--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,10 @@
+VOLUME_PATH=data
+APP_DATA_MAX_RETRIES=3
+APP_DATA_GIVE_UP_THRESHOLD=100
+
+# Dune credentials
+DUNE_API_KEY=
+
 # AWS Credentials
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
@@ -6,3 +13,10 @@ AWS_INTERNAL_ROLE=
 AWS_EXTERNAL_ROLE=
 AWS_EXTERNAL_ID=
 AWS_BUCKET=
+
+#Orderbook DB Credentials
+BARN_DB_URL={user}:{password}@{host}:{port}/{database}
+PROD_DB_URL={user}:{password}@{host}:{port}/{database}
+
+# IPFS Gateway
+IPFS_ACCESS_TOKEN=
