[Trivial] fix example env file

--- a/.env.sample
+++ b/.env.sample
@@ -8,6 +8,7 @@ DUNE_API_KEY=
 # AWS Credentials
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
+AWS_SESSION_TOKEN=
 
 AWS_INTERNAL_ROLE=
 AWS_EXTERNAL_ROLE=
@@ -19,4 +20,4 @@ BARN_DB_URL={user}:{password}@{host}:{port}/{database}
 PROD_DB_URL={user}:{password}@{host}:{port}/{database}
 
 # IPFS Gateway
-IPFS_ACCESS_TOKEN=
+IPFS_ACCESS_KEY=
