more explicit approach to specify target table

--- a/.env.sample
+++ b/.env.sample
@@ -19,5 +19,8 @@ AWS_BUCKET=
 BARN_DB_URL={user}:{password}@{host}:{port}/{database}
 PROD_DB_URL={user}:{password}@{host}:{port}/{database}
 
+#Target table for app data sync
+APP_DATA_TARGET_TABLE=app_data_mainnet
+
 # IPFS Gateway
 IPFS_ACCESS_KEY=
