--- a/.env.sample
+++ b/.env.sample
@@ -25,3 +25,6 @@ IPFS_ACCESS_KEY=
 
 # Etherscan API key for fetching block number by timestamp
 ETHERSCAN_API_KEY=
+
+# Query ID for the aggregate query on Dune
+AGGREGATE_QUERY_ID=
