--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -46,4 +46,4 @@ jobs:
         run: |
           prefect config set PREFECT_API_URL=$PREFECT_API_URL
 
-      - run: python prefect/deployment.py
+      - run: python deploy_prefect/deployment.py
