--- a/.env.sample
+++ b/.env.sample
@@ -22,3 +22,9 @@ APP_DATA_TARGET_TABLE=app_data_mainnet
 
 # IPFS Gateway
 IPFS_ACCESS_KEY=
+
+# Etherscan API key for fetching block number by timestamp
+ETHERSCAN_API_KEY=
+
+# Query ID for the aggregate query on Dune
+AGGREGATE_QUERY_ID=
