--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -40,6 +40,7 @@ jobs:
       - run: |
           python -m pip install --upgrade pip
           pip install -r requirements/prefect.txt
+          pip install -r requirements/prod.txt
 
       - env:
           PREFECT_API_URL: ${{ secrets.PREFECT_API_URL }}
