--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -56,6 +56,7 @@ jobs:
         with:
           python-version: '3.12'
 
+    steps:
       - run: |
           python -m pip install --upgrade pip
           pip install -r requirements/prefect.txt
