--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -57,6 +57,10 @@ jobs:
           python-version: '3.12'
 
     steps:
+      - uses: actions/setup-python@v2
+        with:
+          python-version: '3.12'
+
       - run: |
           python -m pip install --upgrade pip
           pip install -r requirements/prefect.txt
