--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -29,38 +29,9 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.10", "3.11"]
+        python-version: ["3.12"]
 
     steps:
-      - uses: actions/checkout@v2
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v2
-        with:
-          python-version: ${{ matrix.python-version }}
-
-      - name: Install Requirements
-        run: pip install -r requirements/dev.txt
-      - name: Unit Tests
-        run: python -m pytest tests/unit
-        env:
-          IPFS_ACCESS_KEY: ${{ secrets.IPFS_ACCESS_KEY }}
-      - name: Integration Tests
-        run: python -m pytest tests/integration
-        env:
-          PROD_DB_URL: ${{ secrets.PROD_DB_URL }}
-          BARN_DB_URL: ${{ secrets.BARN_DB_URL }}
-
-  prefect:
-    runs-on: ubuntu-latest
-      - uses: actions/setup-python@v2
-        with:
-          python-version: '3.12'
-
-    steps:
-      - uses: actions/setup-python@v2
-        with:
-          python-version: '3.12'
-
       - run: |
           python -m pip install --upgrade pip
           pip install -r requirements/prefect.txt
