--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -32,7 +32,13 @@ jobs:
         python-version: ["3.12"]
 
     steps:
+      - uses: actions/checkout@v2
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python-version }}
       - run: |
+          python -m pip install --upgrade pip
           pip install -r requirements/prefect.txt
           pip install -r requirements/prod.txt
 
