--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -47,5 +47,5 @@ jobs:
         run: |
           prefect config set PREFECT_API_URL=$PREFECT_API_URL
 
-      - run: python -m src/deploy_prefect/deployment.py
+      - run: python -m src.deploy_prefect.deployment
 
