--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -37,15 +37,14 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
-      - run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements/prefect.txt
-          pip install -r requirements/prod.txt
-
       - env:
           PREFECT_API_URL: ${{ secrets.PREFECT_API_URL }}
         run: |
           prefect config set PREFECT_API_URL=$PREFECT_API_URL
+      - run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements/prefect.txt
+          pip install -r requirements/prod.txt
+          python -m src.deploy_prefect.deployment
 
-      - run: python -m src.deploy_prefect.deployment
 
