--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -37,14 +37,11 @@ jobs:
         with:
           python-version: '3.12'
 
+      - env:
+          PREFECT_API_URL: ${{ secrets.PREFECT_API_URL }}
       - run: |
           python -m pip install --upgrade pip
           pip install -r requirements/prefect.txt
           pip install -r requirements/prod.txt
-
-      - env:
-          PREFECT_API_URL: ${{ secrets.PREFECT_API_URL }}
-        run: |
           prefect config set PREFECT_API_URL=$PREFECT_API_URL
-
-      - run: python -m src.deploy_prefect.deployment
+          python -m src.deploy_prefect.deployment
