--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -37,13 +37,11 @@ jobs:
         with:
           python-version: '3.12'
 
+      - env:
+          PREFECT_API_URL: ${{ secrets.PREFECT_API_URL }}
       - run: |
           python -m pip install --upgrade pip
           pip install -r requirements/prefect.txt
-
-      - env:
-          PREFECT_API_URL: ${{ secrets.PREFECT_API_URL }}
-        run: |
+          pip install -r requirements/prod.txt
           prefect config set PREFECT_API_URL=$PREFECT_API_URL
-
-      - run: python src/deploy_prefect/deployment.py
+          python -m src.deploy_prefect.deployment
