--- a/.github/workflows/prefect.yaml
+++ b/.github/workflows/prefect.yaml
@@ -4,6 +4,27 @@ on:
   push:
     branches: [ main ]
 jobs:
+  lint-format-types-test:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ["3.10", "3.11"]
+
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Install Requirements
+        run: pip install -r requirements/dev.txt
+      - name: Pylint
+        run: pylint src/
+      - name: Black
+        run: black --check ./
+      - name: Type Check (mypy)
+        run: mypy src --strict
+
   prefect:
     runs-on: ubuntu-latest
     strategy:
@@ -24,3 +45,5 @@ jobs:
           pip install -r requirements/prod.txt
           prefect config set PREFECT_API_URL=$PREFECT_API_URL
           python -m src.deploy_prefect.deployment
+
+
