--- a/.github/workflows/prefect.yaml
+++ b/.github/workflows/prefect.yaml
@@ -29,9 +29,9 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.10", "3.11"]
+        python-version: ["3.12"]
 
-    steps:
+  steps:
       - uses: actions/checkout@v2
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v2
