--- a/.github/workflows/prefect.yaml
+++ b/.github/workflows/prefect.yaml
@@ -1,29 +1,10 @@
-name: pull request
+name: prefect
 on:
   pull_request:
   push:
     branches: [ main ]
 jobs:
-  lint-format-types-test:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: ["3.10", "3.11"]
-    steps:
-      - uses: actions/checkout@v2
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v2
-        with:
-          python-version: ${{ matrix.python-version }}
-      - name: Install Requirements
-        run: pip install -r requirements/dev.txt
-      - name: Pylint
-        run: pylint src/
-      - name: Black
-        run: black --check ./
-      - name: Type Check (mypy)
-        run: mypy src --strict
-  tests:
+  deployment:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -31,10 +12,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - name: Set up Python ${{ matrix.python-version }}
+      - name: Set up Python
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
+
+      - name: Deploy prefect deployment
       - env:
           PREFECT_API_URL: ${{ secrets.PREFECT_API_URL }}
       - run: |
