--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -9,6 +9,7 @@ jobs:
     strategy:
       matrix:
         python-version: ["3.10", "3.11"]
+
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python ${{ matrix.python-version }}
@@ -23,11 +24,12 @@ jobs:
         run: black --check ./
       - name: Type Check (mypy)
         run: mypy src --strict
+
   tests:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.12"]
+        python-version: ["3.10", "3.11"]
 
     steps:
       - uses: actions/checkout@v2
@@ -35,12 +37,15 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
-      - env:
-          PREFECT_API_URL: ${{ secrets.PREFECT_API_URL }}
-      - run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements/prefect.txt
-          pip install -r requirements/prod.txt
-          prefect config set PREFECT_API_URL=$PREFECT_API_URL
-          python -m src.deploy_prefect.deployment
 
+      - name: Install Requirements
+        run: pip install -r requirements/dev.txt
+      - name: Unit Tests
+        run: python -m pytest tests/unit
+        env:
+          IPFS_ACCESS_KEY: ${{ secrets.IPFS_ACCESS_KEY }}
+      - name: Integration Tests
+        run: python -m pytest tests/integration
+        env:
+          PROD_DB_URL: ${{ secrets.PROD_DB_URL }}
+          BARN_DB_URL: ${{ secrets.BARN_DB_URL }}
