--- a/.github/workflows/prefect.yaml
+++ b/.github/workflows/prefect.yaml
@@ -18,9 +18,9 @@ jobs:
           python-version: ${{ matrix.python-version }}
 
       - name: Deploy prefect deployment
-      - env:
+        env:
           PREFECT_API_URL: ${{ secrets.PREFECT_API_URL }}
-      - run: |
+        run: |
           python -m pip install --upgrade pip
           pip install -r requirements/prefect.txt
           pip install -r requirements/prod.txt
