--- a/.env.sample
+++ b/.env.sample
@@ -28,3 +28,21 @@ ETHERSCAN_API_KEY=
 
 # Query ID for the aggregate query on Dune
 AGGREGATE_QUERY_ID=
+
+# Node for each chain we want to run a sync job on
+NODE_URL_MAINNET=
+NODE_URL_GNOSIS=
+NODE_URL_ARBITRUM=
+
+# The network which we run a sync job on.
+# Current options are: {"mainnet", "xdai", "arbitrum-one"}
+NETWORK=
+
+# The prefix of the dune table where we sync the various mainnet price feeds
+PRICE_FEED_TARGET_TABLE
+
+# The prefix of the dune table where we sync the monthly raw batch data
+BATCH_DATA_TARGET_TABLE = "batch_data"
+
+# Dune api timeout parameter, where we recommend to set it to 600
+DUNE_API_REQUEST_TIMEOUT = 600
