small edits in env.sample

--- a/.env.sample
+++ b/.env.sample
@@ -39,10 +39,10 @@ NODE_URL_ARBITRUM=
 NETWORK=
 
 # The prefix of the dune table where we sync the various mainnet price feeds
-PRICE_FEED_TARGET_TABLE
+PRICE_FEED_TARGET_TABLE=
 
 # The prefix of the dune table where we sync the monthly raw batch data
-BATCH_DATA_TARGET_TABLE = "batch_data"
+BATCH_DATA_TARGET_TABLE="batch_data"
 
 # Dune api timeout parameter, where we recommend to set it to 600
-DUNE_API_REQUEST_TIMEOUT = 600
+DUNE_API_REQUEST_TIMEOUT=600
